UX: thread list fixes for alignment and more spacing on mobile (#23823)
* UX: fix padding on active touch
* UX: thread list header bigger + alignment
* UX: thread list alignment desktop
* UX: visual corrections to alignment
* UX: mobile alignment and padding

--- a/plugins/chat/assets/stylesheets/common/chat-thread-list-item.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-thread-list-item.scss
@@ -1,8 +1,8 @@
 @mixin thread-list-item {
   display: flex;
   flex-direction: row;
-  padding: 1rem;
-  margin-inline: 0.5rem;
+  padding: 1rem 0;
+  margin-inline: 1rem 0.75rem;
   border-radius: var(--d-border-radius);
   border-bottom: 1px solid var(--primary-low);
   cursor: pointer;
@@ -18,7 +18,7 @@
   .touch & {
     &:active {
       background-color: var(--d-hover);
-      padding-inline: 1.5rem;
+      padding-inline: 1rem 0.75rem;
       margin-inline: 0;
     }
   }
@@ -27,7 +27,7 @@
     &:hover,
     &:active {
       background-color: var(--d-hover);
-      padding-inline: 1.5rem;
+      padding-inline: 1rem 0.75rem;
       margin-inline: 0;
     }
   }
