--- a/plugins/chat/assets/stylesheets/mobile/chat-threads-list.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-threads-list.scss
@@ -1,11 +1,5 @@
 .chat-thread-list {
-  &__items {
-    .chat-thread-list-item {
-      padding: 0.5rem 0.25rem;
-    }
-
-    &__no-threads {
-      margin: 0.5rem;
-    }
+  &__no-threads {
+    margin: 0.5rem;
   }
 }
